Contribution from 10.05.2019