@@ -3,8 +3,13 @@ package OCAJP.wrappers;
 public class BooleanWraps {
     public static void main(String[] args) {
         // all above string_tools produce instance of Boolean with true value
-        Boolean aTrue1 = Boolean.TRUE;
-        Boolean aTrue2 = Boolean.valueOf("true");
-        Boolean aTrue3 = new Boolean("True"); // ignoring case
+        final Boolean aTrue = Boolean.TRUE;
+        final Boolean aTrue1 = Boolean.valueOf("true");
+        final Boolean aTrue2 = new Boolean("True");// ignoring case
+        final boolean aTrue3 = Boolean.parseBoolean("tRue");
+        final boolean aTrue4 = Boolean.getBoolean("sasasa");
+
+        System.out.println("" + aTrue + aTrue1 + aTrue2 + aTrue3 + aTrue4);
+
     }
 }
